Added Mail Feature

--- a/src/app/contactus/contactus.page.html
+++ b/src/app/contactus/contactus.page.html
@@ -11,25 +11,25 @@
 
 <ion-content padding>
     <div class="container">
-        <form action="action_page">
+        <form (ngSubmit)="onSubmit(myForm.value)" [formGroup]="myForm">
       
           <label for="fname">First Name</label>
-          <input type="text" id="fname" name="firstname" placeholder="Your name..">
+          <input type="text" formControlName="firstname" placeholder="Your name..">
       
           <label for="lname">Last Name</label>
-          <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+          <input type="text" formControlName="lastname" placeholder="Your last name..">
       
           <label for="country">Country</label>
-          <select id="country" name="country">
+          <select formControlName="country">
             <option value="India">India</option>
             <option value="canada">Canada</option>
             <option value="usa">USA</option>
           </select>
       
-          <label for="subject">Subject</label>
-          <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+          <label for="message">Message</label>
+          <textarea formControlName="message" placeholder="Write something.." style="height:200px"></textarea>
       
-          <input type="submit" value="Submit">
+          <ion-button [disabled]="!myForm.valid" type="submit" >Submit</ion-button>
       
         </form>
       </div>
