--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -15,6 +15,8 @@
   <div id="container"  ></div>
 </ion-card-content>
 </ion-card>
+<!-- <div id="container"  ></div>
+<div id="container2" ></div> -->
 
 <ion-card>
   <ion-card-content>
