--- a/src/app/dashboard/dashboard.page.scss
+++ b/src/app/dashboard/dashboard.page.scss
@@ -1,20 +1,22 @@
 
     
 #container {
-	// position: relative;
-    width: 320px;
-    height: 320px;
+    position: relative;
+	height: 300px;
+	min-width: 310px;
+	max-width: 800px;
 }
    
 #container2 {
-	// position: relative;
-    width: 320px;
-    height: 320px;
+    position: relative;
+	height: 300px;
+	min-width: 310px;
+	max-width: 800px;
 }
-// #chart {
-//     display: table-cell;
-//     position:absolute;
-//     width:50%;
+
+// #container2 {
+//     display: block;
+//     width:100%;
 // }
 // .ios, .md {
  
