--- a/src/app/signupform/signupform.page.scss
+++ b/src/app/signupform/signupform.page.scss
@@ -13,3 +13,7 @@
 // ion-content ion-scroll {
 //     --background: url('../../assets/images/bg.jpg');
 //     }
+
+.error-message {
+    color: red;
+}
