--- a/src/app/medicalhistory/medicalhistory.page.html
+++ b/src/app/medicalhistory/medicalhistory.page.html
@@ -6,6 +6,14 @@
 
 
 <ion-content padding>
+    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content
+          pullingIcon="arrow-dropdown"
+          pullingText="Pull to refresh"
+          refreshingSpinner="circles"
+          refreshingText="Refreshing...">
+        </ion-refresher-content>
+      </ion-refresher>
 
     
     <form (ngSubmit)="onSubmit(myForm.value)"  [formGroup]="myForm" >
