--- a/src/app/contactus/contactus.page.html
+++ b/src/app/contactus/contactus.page.html
@@ -10,6 +10,14 @@
   </ion-header>
 
 <ion-content padding>
+    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+        <ion-refresher-content
+          pullingIcon="arrow-dropdown"
+          pullingText="Pull to refresh"
+          refreshingSpinner="circles"
+          refreshingText="Refreshing...">
+        </ion-refresher-content>
+      </ion-refresher>
     <div class="container">
         <form (ngSubmit)="onSubmit(myForm.value)" [formGroup]="myForm">
       
