--- a/src/app/workout/workout.page.html
+++ b/src/app/workout/workout.page.html
@@ -10,6 +10,14 @@
 </ion-header>
 
 <ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+    <ion-refresher-content
+      pullingIcon="arrow-dropdown"
+      pullingText="Pull to refresh"
+      refreshingSpinner="circles"
+      refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
   <h1 align="center" id = "Day" ></h1>
 <div class="container">
 	<table>
