--- a/src/app/workoutlog/workoutlog.page.html
+++ b/src/app/workoutlog/workoutlog.page.html
@@ -14,6 +14,14 @@
 <!-- <script src="//code.ionicframework.com/nightly/js/ionic.bundle.js"></script> -->
 
 <ion-content padding>
+    <ion-refresher slot="fixed" (ionRefresh)="doRefresh($event)">
+      <ion-refresher-content
+        pullingIcon="arrow-dropdown"
+        pullingText="Pull to refresh"
+        refreshingSpinner="circles"
+        refreshingText="Refreshing...">
+      </ion-refresher-content>
+    </ion-refresher>
   <form (ngSubmit)="onSubmit(myForm.value)" [formGroup]="myForm">
    
     <h6 floating >Workout Type</h6>
