--- a/src/app/dashboard/dashboard.page.scss
+++ b/src/app/dashboard/dashboard.page.scss
@@ -1,23 +1,12 @@
-
-    
-#container {
-    position: relative;
-	height: 300px;
-	min-width: 310px;
-	max-width: 800px;
-}
    
-#container2 {
-    position: relative;
-	height: 300px;
-	min-width: 310px;
-	max-width: 800px;
-}
-
 // #container2 {
-//     display: block;
-//     width:100%;
+//     position: relative;
+// 	height: 300px;
+// 	min-width: 310px;
+// 	max-width: 800px;
 // }
+
+
 // .ios, .md {
  
 //     page-home {
