--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app>
   <ion-split-pane>
-    <ion-menu menu-id="menu1">
+    <ion-menu menu-id="menu1" swipe-gesture='false'>
       <ion-header>
         <ion-toolbar>
           <ion-title>Menu</ion-title>
@@ -24,7 +24,7 @@
       </ion-content>
     </ion-menu>
 
-    <ion-menu  menu-id="menu2">
+    <ion-menu  menu-id="menu2" swipe-gesture='false'>
       <ion-header>
           <ion-toolbar>
             <ion-title>Menu2</ion-title>
