--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,11 +1,35 @@
 
+ion-content {
+  --background: transparent;
+}
 #logo {
     display: block;
     text-align: center;
+    height: 40%;
+  }
+
+  img {
+    height: 100%;
+    width: 100%;
   }
 
 #contentLine{
     text-align:center;
+    height: 50%;
+}
+
+#contentLine p:nth-child(1) {
+  font-size: 22px;
+  color: #232323;
+}
+
+#contentLine p:nth-child(2) {
+  font-size: 18px;
+  color: #666;
+}
+
+.height10 {
+  height: 10%;
 }
 
 /* Shared */
@@ -29,7 +53,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 34px;
+  width: 45px;
   height: 100%;
 }
 .loginBtn:focus {
@@ -43,12 +67,19 @@
   .loginBtn--google {
     /*font-family: "Roboto", Roboto, arial, sans-serif;*/
     background: #DD4B39;
+    width: 100%;
+    border-radius: 10px;
+    height: 50px;
+    font-size: 1.2em;
   }
   .loginBtn--google:before {
     border-right: #BB3F30 1px solid;
-    background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 6px 6px no-repeat;
+    background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 10px 15px no-repeat;
   }
   .loginBtn--google:hover,
   .loginBtn--google:focus {
     background: #E74B37;
   }
+
+
+
