--- a/src/global.scss
+++ b/src/global.scss
@@ -9,3 +9,8 @@
 @import '~@ionic/angular/css/text-alignment.css';
 @import '~@ionic/angular/css/text-transformation.css';
 @import '~@ionic/angular/css/flex-utils.css';
+
+app-login.ion-page {
+    background: url('assets/images/bg.svg');
+    background-size: cover;
+  }
