--- a/src/app/workout/workout.page.scss
+++ b/src/app/workout/workout.page.scss
@@ -4,6 +4,18 @@
 // 	left: 50%;
 // 	transform: translate(-50%, -50%);
 // }
+ion-select {
+	width: 100%;
+	padding: 16px 20px;
+	border: none;
+	border-radius: 4px;
+	background-color: #f1f1f1;
+  }
+
+  
+.hide {
+    display: none;
+  }
 
 table {
    
