--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,85 +1,103 @@
-
-ion-content {
-  --background: transparent;
+:host {
+  ion-content {
+    --background: url('../../assets/images/bg.svg') no-repeat center center / cover;
+    padding: 0px;
+  }
 }
-#logo {
-    display: block;
-    text-align: center;
-    height: 40%;
-  }
-
-  img {
-    height: 100%;
-    width: 100%;
-  }
-
-#contentLine{
-    text-align:center;
-    height: 50%;
+.center {
+  width: 90%;
+	height: 30%;
+	position: absolute;
+	top:0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	margin: auto;
 }
 
-#contentLine p:nth-child(1) {
-  font-size: 22px;
+.center > svg {
+  width: 75%;
+  margin-left: 12.5%;
+}
+
+
+.tag-line {
+  font-size: 1em;
   color: #232323;
+  text-align: end;
+  margin-top: 0;
 }
 
-#contentLine p:nth-child(2) {
-  font-size: 18px;
+.description {
+  font-size: 1em;
   color: #666;
-}
-
-.height10 {
-  height: 10%;
-}
-
-/* Shared */
-.loginBtn {
-  box-sizing: border-box;
-  position: relative;
-  /* width: 13em;  - apply for fixed size */
-  margin: 0.2em;
-  padding: 0 15px 0 46px;
-  border: none;
+  margin-top: 15%;
   text-align: center;
-  line-height: 34px;
-  white-space: nowrap;
-  border-radius: 0.2em;
-  font-size: 16px;
-  color: #FFF;
+  color: #2c4665;
+  font-weight: 600;
+  letter-spacing: 2px;
 }
-.loginBtn:before {
-  content: "";
-  box-sizing: border-box;
+
+.footer {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 45px;
-  height: 100%;
+  bottom: 5%;
+  width: 100%;
+  height: 50px;
 }
-.loginBtn:focus {
-  outline: none;
-}
-.loginBtn:active {
-  box-shadow: inset 0 0 0 32px rgba(0,0,0,0.1);
+
+.footer button {
+  width: 86%;
+  margin-left: 7%;
 }
 
 
-  .loginBtn--google {
-    /*font-family: "Roboto", Roboto, arial, sans-serif;*/
-    background: #DD4B39;
-    width: 100%;
-    border-radius: 10px;
-    height: 50px;
-    font-size: 1.2em;
+.google-button {
+  height: 40px;
+  border-width: 0;
+  background: white;
+  color: #2c4665;;
+  border-radius: 5px;
+  white-space: nowrap;
+  box-shadow: 1px 1px 0px 1px rgba(0,0,0,0.05);
+  transition-property: background-color, box-shadow;
+  transition-duration: 150ms;
+  transition-timing-function: ease-in-out;
+  padding: 0;
+  
+  &:focus,
+  &:hover {
+    box-shadow: 1px 4px 5px 1px rgba(0,0,0,0.1);
   }
-  .loginBtn--google:before {
-    border-right: #BB3F30 1px solid;
-    background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 10px 15px no-repeat;
+  
+  &:active {
+    background-color: #e5e5e5;
+    box-shadow: none;
+    transition-duration: 10ms;
   }
-  .loginBtn--google:hover,
-  .loginBtn--google:focus {
-    background: #E74B37;
-  }
+}
+    
+.google-button__icon {
+  display: inline-block;
+  vertical-align: middle;
+  margin: 8px 0 8px 8px;
+  width: 18px;
+  height: 18px;
+  box-sizing: border-box;
+}
 
+.google-button__icon--plus {
+  width: 27px;
+}
 
+.google-button__text {
+  display: inline-block;
+  vertical-align: middle;
+  padding: 0 24px;
+  font-size: 14px;
+  font-weight: bold;
+  font-family: 'Roboto',arial,sans-serif;
+}
 
+button ~ button {
+  margin-left: 20px;
+}
