--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,6 +1,6 @@
 :host {
   ion-content {
-    --background: url('../../assets/images/bg.svg') no-repeat center center / cover;
+    --background: #f7f7f7;;
     padding: 0px;
   }
 }
@@ -8,7 +8,7 @@
   width: 90%;
 	height: 30%;
 	position: absolute;
-	top:0;
+	top: -40%;
 	bottom: 0;
 	left: 0;
 	right: 0;
@@ -20,22 +20,29 @@
   margin-left: 12.5%;
 }
 
+.center > svg .cls-4 {
+  fill: #ccc;
+}
+
 
 .tag-line {
   font-size: 1em;
-  color: #232323;
+  color: #aaa;
   text-align: end;
   margin-top: 0;
+  letter-spacing: 1px;
+  font-weight: 500;
 }
 
 .description {
-  font-size: 1em;
+  font-size: 1.3em;
   color: #666;
-  margin-top: 15%;
+  margin-top: 20%;
   text-align: center;
   color: #2c4665;
-  font-weight: 600;
-  letter-spacing: 2px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  line-height: 1.4em;
 }
 
 .footer {
