--- a/src/app/workout/workout.page.html
+++ b/src/app/workout/workout.page.html
@@ -19,16 +19,16 @@
     </ion-refresher-content>
   </ion-refresher>
   <h3 align="center" id = "Day" ></h3>
-
 <div align='center'>
-  <ion-select [(ngModel)]="selectedOption" (ionChange)="SelectedValue(selectedOption)" placeholder = "Select an option">
-    <ion-select-option aria-selected="true" value = "Today">Today's Workout</ion-select-option>
-    <ion-select-option value = "Long">Long Workout</ion-select-option>
-    <ion-select-option value = "Tempo">Tempo Workout</ion-select-option>
-    <ion-select-option value = "Interval">Interval workout</ion-select-option>
-    <ion-select-option value = "Speed">Speed workout</ion-select-option>
-    <ion-select-option value = "Strengthex">Strength workout</ion-select-option>
-  </ion-select>
+  <label>Select an option</label>
+  <select [(ngModel)]="selectedOption" (ngModelChange) ="SelectedValue(selectedOption)">
+    <option value = "Today">Today's Workout</option>
+    <option value = "Long">Long Workout</option>
+    <option value = "Tempo">Tempo Workout</option>
+    <option value = "Interval">Interval workout</option>
+    <option value = "Speed">Speed workout</option>
+    <option value = "Strengthex">Strength workout</option>
+  </select>
 </div>
 
 <div class="hide" id = "container">
