--- a/src/app/workout/workout.page.scss
+++ b/src/app/workout/workout.page.scss
@@ -1,18 +1,16 @@
-// .container {
-// 	position: absolute;
-// 	top: 50%;
-// 	left: 50%;
-// 	transform: translate(-50%, -50%);
-// }
-ion-select {
+
+select {
+	text-align: center;
 	width: 100%;
 	padding: 16px 20px;
-	border: none;
+	border: 1px solid #ccc;;
 	border-radius: 4px;
-	background-color: #f1f1f1;
-  }
-
-  
+	// background-color: #f1f1f1;
+	box-sizing: border-box; 
+	margin-top: 6px;
+	margin-bottom: 16px;
+	}
+	
 .hide {
     display: none;
   }
