--- a/src/app/workoutlog/workoutlog.page.html
+++ b/src/app/workoutlog/workoutlog.page.html
@@ -25,7 +25,7 @@
   <form (ngSubmit)="onSubmit(myForm.value)" [formGroup]="myForm">
    
     <h6 floating >Workout Type</h6>
-    <input type="text" readonly formControlName="workout_type" required >
+    <input type="text" formControlName="workout_type" required >
 
     <h6 floating>Feedback</h6> 
     <div>
